terraform-best-practices/aws/ecs/terraform/check-awsvpc-network-mode/test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../check-awsvpc-network-mode.yaml --payload good-payload.json --output json
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-awsvpc-network-mode
                rules:
                - rule:
                    name: check-awsvpc-network-mode
                  error: ~
                  violations: ~
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../check-awsvpc-network-mode.yaml --payload bad-payload.json --output json
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-awsvpc-network-mode
                rules:
                - rule:
                    name: check-awsvpc-network-mode
                  error: ~
                  violations:
                  - message: ECS services and tasks are required to use awsvpc network mode.
                    errors:
                    - type: FieldValueInvalid
                      (value != 'awsvpc'): true
                      detail: 'Expected value: "awsvpc"'
